untarred/andrew/authentik/authentik-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik 
  namespace: auth 
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth.dunde.live`)  
      kind: Rule
      services:
        - name: authentik-server
          port: 443
  tls:
    secretName: dunde-live-tls
